Fixed spacing

--- a/src/components/company_lilst/CompanyList.css
+++ b/src/components/company_lilst/CompanyList.css
@@ -1,3 +1,7 @@
 .card-wrapper {
     padding: 10px 10px 10px 10px;
 }
+
+.company_list {
+    padding: 20px 20px 20px 20px;
+}
